# rrt-fpga

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml  verilog.yml
app/: Cargo.toml
app/src/: main.rs
rrt/: Cargo.toml
rrt/benches/: kdtree.rs
rrt/src/: lib.rs  vanilla.rs
rrt/src/alg/: dfs.rs  mod.rs  raytrace.rs
rrt/src/cpu/: kdtree.rs  mod.rs  raytrace.rs  vanilla.rs
rrt/src/cpu/alg/: mod.rs  raytrace.rs
rrt/src/cpu/ds/: kdtree.rs
rrt/src/ds/: grid.rs  mod.rs  point_list.rs
rrt/src/ds/nn_index/: kdtree.rs  mod.rs
rrt/src/fl_model/: mod.rs
rrt/src/fl_model/ds/: mod.rs  static_2dtree.rs  vec_point_list.rs
rrt/src/fpga/: mod.rs
rrt/src/fpga/verilog/src/: bram.sv  cell_access_bus.sv  directed_energy_weapon.sv  membus.sv  occupancy_grid.sv  point.sv  prng.sv
rrt/src/fpga/verilog/test/: .gitignore  bram.rs  directed_energy_weapon.rs  mod.rs  occupancy_grid.rs  prng.rs  pyproject.toml  runner_util.py  test_bram.py  test_my_design.py  test_my_design2.py  test_occupancy_grid.py  test_prng.py  util.py
rrt/src/fpga/verilog/test/wrappers/: bram_wrapper.sv  directed_energy_weapon_wrapper.sv  occupancy_grid_wrapper.sv
rrt/src/fpga/verilog/test_py/: test_directed_energy_weapon.py  test_occupancy_grid.py  test_prng.py
rrt/src/shared/: mod.rs
rrt/src/shared/alg/: dfs.rs
rrt/src/shared/ds/: mod.rs  nn_index.rs  point_list.rs
