[package]
name = "rrt"
version = "0.1.0"
edition = "2024"

[dependencies]
nalgebra.workspace = true
bitvec = "1.0.1"
rand = "0.10.1"

[dev-dependencies]
criterion = "0.8.2"
marlin = { git = "https://github.com/utkudotdev/marlin.git", rev = "d7600b", features = [
    "verilog",
] }
snafu = "0.8.5"

[[bench]]
name = "kdtree"
harness = false
